# tgcrypto2

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: wheels.yml
tests/cbc/: test_cbc.py
tests/ctr/: test_ctr.py
tests/ige/: test_ige.py
tgcrypto/: __init__.py  tgcrypto.c
